change rejectCalls type to textarea

--- a/public/index.html
+++ b/public/index.html
@@ -254,7 +254,8 @@
                             </div>
                             <div class="col-12 col-md-12 col-lg-6">
                                 <label for="rejectCalls" class="form-label">Mensagem ao Rejeitar Chamadas</label>
-                                <input type="text" class="form-control" id="rejectCalls" name="rejectCalls" placeholder="Deixe em Branco para não Rejeitar ligações automaticamente">
+                                <textarea class="form-control" id="rejectCalls" name="rejectCalls" placeholder="Deixe em Branco para não Rejeitar ligações automaticamente">
+                                </textarea>
                             </div>
                             <div class="col-12 col-md-12 col-lg-6">
                               <label for="connectionType" class="form-label">Tipo de Conexão</label>
